--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -12,6 +12,7 @@
           <th>Airline</th>
           <th>Flight Number</th>
           <th>Departs</th>
+          <th>Destination</th>
         </tr>
       </thead>
       <tbody>
@@ -20,6 +21,8 @@
             <td><%= f.airline %></td>
             <td><%= f.flightNo %></td>
             <td><%= f.departs %></td>
+            <td><%= f.airport %></td>
+            
           </tr>
         <% }) %>
       </tbody>
