--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -22,7 +22,7 @@
             <td><%= f.flightNo %></td>
             <td><%= f.departs %></td>
             <td><%= f.airport %></td>
-            
+            <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
           </tr>
         <% }) %>
       </tbody>
