--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -24,7 +24,7 @@
         <label>Departure
             <input type="datetime-local" name="departs" value ="2019-05-17T15:30" min="2019-05-17T00:00" max="2020-05-17T00:00">
         </label><br>
-        <label>Destinations:
+        <label>Airport:
             <select name="airport">
                 <option value="AUS">AUS</option>
                 <option value="DAL">DAL</option>
